# Tangram

./: .gitignore  A LIRE QUENTIN PLEASE  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_commands.json  consigne.md  tangram
doc/: DoxygenLayout.xml  concept.md  concept.md.backup  consigne.md  rapport.odt
game/: CMakeLists.txt  Makefile
game/include/: Engine.hpp  Event.hpp  Parser.hpp  ParserException.hpp  State.hpp  Updatable.hpp
game/src/: Engine.cpp  Event.cpp  Parser.cpp  ParserException.cpp  State.cpp  main.cpp
geometry/: Makefile
geometry/include/: Parser.hpp  ParserException.hpp  Point.hpp  Polygon.hpp  Shape.hpp  Triangle.hpp  geometry.hpp
geometry/src/: Parser.cpp  ParserException.cpp  Point.cpp  Polygon.cpp  Shape.cpp  Triangle.cpp
gui/: Makefile
gui/include/: Button.hpp  Drawable.hpp  Observable.hpp  Observer.hpp
gui/src/: Button.cpp  Observer.cpp
include/: Game.hpp  Item.h  Polygon.hpp  ShapeSet.hpp  Square.hpp  Triangle.hpp
include/tangram/game/: Engine.hpp  Event.hpp  InputState.hpp  Updatable.hpp
include/tangram/geometry/: Parser.hpp  ParserException.hpp  Point.hpp  Polygon.hpp  Shape.hpp  Triangle.hpp
include/tangram/gui/: Button.hpp  ButtonAbstract.hpp  ButtonDraw.hpp  ButtonText.hpp  Drawable.hpp  FadingText.hpp  Line.hpp  ShapePreview.hpp
include/tangram/state/: Create.hpp  Edit.hpp  Load.hpp  Menu.hpp  Play.hpp  ShapeLoaderState.hpp  State.hpp  StateAbstract.hpp
resources/: default.shp
resources/background/: A.shp  Duck.shp  Lapin.shp  M.shp  N.shp  R.shp  T.shp
resources/shapes/: Bateau.shp  Cadeau.shp  G.shp  Grue.shp  Home.shp  Lièvre.shp  Lolol (23rd copy).shp  Renard.shp  Sapin.shp  Square.shp  Test.shp  Test6.shp  bonjour.shp  bougie.shp  fdhftgjh.shp  robert.shp
shape/: CMakeLists.txt  Makefile
shape/include/: Parallelogram.hpp  Point.hpp  Polygon.hpp  Shape.hpp  ShapeSet.hpp  Square.hpp  Triangle.hpp  Vector.hpp
shape/src/: Parallelogram.cpp  Point.cpp  Polygon.cpp  Shape.cpp  ShapeSet.cpp  Square.cpp  Triangle.cpp  Vector.cpp
src/: Game.cpp  Parallelogram.cpp  Point.cpp  ShapeSet.cpp  Square.cpp  main.cpp
src/tangram/game/: Engine.cpp  Event.cpp  InputState.cpp  Updatable.cpp  main.cpp
src/tangram/geometry/: Parser.cpp  ParserException.cpp  Polygon.cpp  Shape.cpp  Triangle.cpp
src/tangram/gui/: Button.cpp  ButtonAbstract.cpp  ButtonDraw.cpp  ButtonText.cpp  FadingText.cpp  Line.cpp  ShapePreview.cpp
src/tangram/state/: Create.cpp  Edit.cpp  Load.cpp  Menu.cpp  Play.cpp
state/: Makefile
state/include/: Edit.hpp  Load.hpp  Menu.hpp  Play.hpp  Save.hpp  StateAbstract.hpp
state/src/: Edit.cpp  Load.cpp  Menu.cpp  Play.cpp  Save.cpp  State.cpp
